- fix sphere visualize - optimization